# layoutparser-ort

./: Cargo.toml  LICENSE  README.md
example/: predict.rs
examples/: boxes.rs  ocr.rs  predict.rs  predict_detectron2.rs  predict_yolox.rs
src/: error.rs  layout_element.rs  lib.rs  utils.rs
src/models/: detectron2.rs  mod.rs  yolox.rs
src/ocr/: hocr_ext.rs  mod.rs
