[package]
name = "layoutparser-ort"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = { version = "1.3.0", optional = true }
hf-hub = "0.3.2"
image = "0.25.1"
itertools = "0.12.1"
ndarray = "0.15.6"
ort = "2.0.0-rc.2"
serde = { version = "1.0.199", features = ["derive"], optional = true }
thiserror = "1.0.59"
tracing = "0.1.40"

[features]
default = []
serde = ["dep:serde"]
save = ["dep:csv"]