[package]
name = "layoutparser-ort"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = { version = "1.3.0", optional = true }
geo-types = "0.7.13"
hf-hub = "0.3.2"
image = "0.25.1"
itertools = "0.12.1"
ndarray = "0.15.6"
ort = "2.0.0-rc.2"
serde = { version = "1.0.199", features = ["derive"], optional = true }
tesseract = { version ="0.15.1", optional = true }
thiserror = "1.0.59"
tracing = "0.1.40"
hocr-parser = { path = "../hocr-parser", optional = true}
roxmltree = { version = "0.19.0", optional = true }

[features]
default = ["ocr"]
serde = ["dep:serde"]
save = ["dep:csv"]
ocr = ["dep:tesseract", "dep:hocr-parser", "dep:roxmltree"]

# ort/onnxruntime execution providers: https://ort.pyke.io/setup/cargo-features
cuda = ["ort/cuda"]
tensorrt = ["ort/tensorrt"]
directml = ["ort/directml"]
coreml = ["ort/coreml"]
rocm = ["ort/rocm"]
openvino = ["ort/openvino"]
onednn = ["ort/onednn"]
xnnpack = ["ort/xnnpack"]
qnn = ["ort/qnn"]
cann = ["ort/cann"]
nnapi = ["ort/nnapi"]
tvm = ["ort/tvm"]
acl = ["ort/acl"]
armnn = ["ort/armnn"]
migraphx = ["ort/migraphx"]
vitis = ["ort/vitis"]
rknpu = ["ort/rknpu"]
