[package]
name = "layoutparser-ort"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "Apache-2.0"
description = "A simplified port of LayoutParser for detecting layout elements on documents."
homepage = "https://github.com/styrowolf/layoutparser-ort"
repository = "https://github.com/styrowolf/layoutparser-ort"
keywords = ["document", "analysis", "layout", "deep-learning"]
categories = ["computer-vision", "multimedia::images", "science", "visualization"]
exclude = [
    "examples/data/*"
]

[[example]]
name = "ocr"
required-features = ["ocr", "png"]

[[example]]
name = "boxes"
required-features = ["png"]

[[example]]
name = "predict_detectron2"
required-features = ["png"]

[[example]]
name = "predict_yolox"
required-features = ["png"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = { version = "1.3.0", optional = true }
geo-types = "0.7.13"
hf-hub = "0.3.2"
image = { version = "0.25.1", default-features = false }
itertools = "0.12.1"
ndarray = "0.15.6"
ort = "2.0.0-rc.2"
serde = { version = "1.0.199", features = ["derive"], optional = true }
tesseract = { version ="0.15.1", optional = true }
thiserror = "1.0.59"
tracing = "0.1.40"
hocr-parser = { version = "0.1.0", optional = true }

[features]
default = []
serde = ["dep:serde"]
save = ["dep:csv"]
ocr = ["dep:tesseract", "dep:hocr-parser"]

# ort/onnxruntime execution providers: https://ort.pyke.io/setup/cargo-features
cuda = ["ort/cuda"]
tensorrt = ["ort/tensorrt"]
directml = ["ort/directml"]
coreml = ["ort/coreml"]
rocm = ["ort/rocm"]
openvino = ["ort/openvino"]
onednn = ["ort/onednn"]
xnnpack = ["ort/xnnpack"]
qnn = ["ort/qnn"]
cann = ["ort/cann"]
nnapi = ["ort/nnapi"]
tvm = ["ort/tvm"]
acl = ["ort/acl"]
armnn = ["ort/armnn"]
migraphx = ["ort/migraphx"]
vitis = ["ort/vitis"]
rknpu = ["ort/rknpu"]

# image features
default-formats = ["image/default-formats"]
rayon = ["image/rayon"]

avif = ["image/avif"]
bmp = ["image/bmp"]
dds = ["image/dds"]
exr = ["image/exr"]
ff = ["image/ff"] # Farbfeld image format
gif = ["image/gif"]
hdr = ["image/hdr"]
ico = ["image/ico"]
jpeg = ["image/jpeg"]
png = ["image/png"]
pnm = ["image/pnm"]
qoi = ["image/qoi"]
tga = ["image/tga"]
tiff = ["image/tiff"]
webp = ["image/webp"]

nasm = ["image/nasm"]
avif-native = ["image/avif-native"]